@@ -1,3 +1,8 @@
+2006-02-19  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/19543
+	* gfortran.dg/logical_1.f90: New test case.
+
 2006-02-19  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/26334
